--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,13 @@
 body {
   background-color: #18171f;
 }
+
+.hero {
+  width: 100%;
+  height: 100vh;
+  background: url(./assets/HeroSectionImage.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+
+}
