--- a/src/components/data.css
+++ b/src/components/data.css
@@ -1,187 +1,271 @@
-* {
-  -webkit-transition: 300ms;
-  transition: 300ms;
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,700");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800,300italic,400italic,600italic,700italic,800italic");
+
+.cellphone-container {
+  width: 300px;
+  height: 475px;
+  background-color: #1e1b26;
+  margin: 60px auto 0 auto;
+  box-shadow: 5px 5px 115px -14px black;
+  border-radius: 4px;
 }
 
-.intro {
-  text-align: center;
+.menu {
+  position: absolute;
+  right: 12px;
+  top: 6px;
+  z-index: 999;
 }
-.list {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  gap: 30px;
+
+.menu i {
+  font-size: 40px;
+  color: #fe4141;
+  filter: drop-shadow(4px 4px 10px rgba(0, 0, 0, 0.5));
+}
+
+.movie-img {
   width: 100%;
-  flex-wrap: wrap;
+  height: 380px;
+  background-image: url("https://i.ibb.co/FDGqCmM/papers-co-ag74-interstellar-wide-space-film-movie-art-33-iphone6-wallpaper.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: 111;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  -webkit-mask-image: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(0, rgba(0, 0, 0, 1)),
+    color-stop(0.35, rgba(0, 0, 0, 1)),
+    color-stop(0.5, rgba(0, 0, 0, 1)),
+    color-stop(0.65, rgba(0, 0, 0, 1)),
+    color-stop(0.85, rgba(0, 0, 0, 0.6)),
+    color-stop(1, rgba(0, 0, 0, 0))
+  );
+
+  position: relative;
 }
 
-ul {
-  list-style-type: none;
+.movie {
+  background: linear-gradient(
+    rgba(255, 255, 255, 0) 38%,
+    rgba(255, 255, 255, 0.06) 39%,
+    rgba(30, 27, 38, 0.88) 53%,
+    rgba(30, 27, 38, 1) 55%
+  );
+
+  position: absolute;
+  background-size: contain;
+  background-size: cover;
+  z-index: 1;
+  width: 300px;
+  height: fit-content;
+  display: block;
+  border-radius: 4px;
 }
+
+.text-movie-cont {
+  padding: 0px 12px;
+  text-align: justify;
+}
+
+.action-btn {
+  text-align: right;
+}
+
+.action-btn i {
+  color: #fe4141;
+  font-size: 28px;
+  text-align: right;
+}
+
+.watch-btn h3 i {
+  font-size: 14px;
+  margin-right: 2px;
+  position: relative;
+  float: left;
+  line-height: 1;
+}
+
+.watch-btn {
+  display: block;
+  border: 1px solid #fe4141;
+  border-radius: 5px;
+  padding: 4px;
+  width: 140px;
+}
+
+.action-row {
+  margin-top: 24px;
+}
+
+.summary-row {
+  margin-top: 12px;
+}
+
+/* TYPOGRAPHY STARTS */
 
 h1,
 h2,
 h3,
 h4,
-h5,
-p {
+h5 {
+  font-family: "Montserrat", sans-serif;
+  color: #e7e7e7;
+  margin: 0;
+}
+
+h1 {
+  font-size: 36px;
   font-weight: 400;
 }
 
-a {
-  text-decoration: none;
-  color: inherit;
+h3 {
+  font-size: 14px;
+  font-weight: 400;
+  color: #fe4141;
 }
 
-a:hover {
-  color: #6abcea;
+h5 {
+  font-size: 12px;
+  font-weight: 400;
 }
 
-.container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  width: 200px;
-  margin-top: 10vh;
-  margin-left: auto;
-  margin-right: auto;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-}
-
-.movie-card {
-  background: #1b1b1b;
-  color: #ffffff !important;
-  box-shadow: 0px 6px 18px rgba(0, 0, 0, 0.1);
-  width: 100%;
-  width: 215px;
-  margin: 2em;
-  border-radius: 10px;
-  display: inline-block;
-}
-
-.movie-header {
-  padding: 0;
-  margin: 0;
-  height: 367px;
-  width: 100%;
+.movie-gen li {
+  font-family: "Open Sans", sans-serif;
+  font-size: 12px;
+  color: #9e9e9e;
+  width: auto;
   display: block;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
+  float: left;
+  margin-right: 6px;
+  font-weight: 600;
 }
 
-.manOfSteel {
-  background: url("http://henrycavill.org/images/Films/2013-Man-of-Steel/posters/3-Walmart-Superman-a.jpg");
-  background-size: cover;
+.movie-likes li {
+  color: #fe4141;
+  i {
+    font-size: 14px;
+    margin-right: 4px;
+    position: relative;
+    float: left;
+    line-height: 1;
+  }
 }
 
-.babyDriver {
-  background: url("https://i0.wp.com/media2.slashfilm.com/slashfilm/wp/wp-content/images/baby-driver-poster.jpg");
-  background-size: cover;
+.movie-details {
+  font-family: "Open Sans", sans-serif;
+  font-size: 12px;
+  font-weight: 300;
+  color: #b0bec5;
 }
 
-.theDarkTower {
-  background: url("http://cdn.collider.com/wp-content/uploads/2017/03/the-dark-tower-poster.jpg");
-  background-size: cover;
-  background-position: 100% 100%;
+.movie-description {
+  font-family: "Open Sans", sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  color: #d7d7d7;
+  text-align: justify;
+  line-height: 1.3;
 }
 
-.bladeRunner2049 {
-  background: url("http://cdn.collider.com/wp-content/uploads/2017/05/blade-runner-2049-poster-ryan-gosling.jpeg");
-  background-size: cover;
-  background-position: 100% 80%;
+.movie-actors {
+  font-family: "Open Sans", sans-serif;
+  font-size: 12px;
+  font-weight: 300;
+  color: #e7e7e7;
+  font-style: italic;
 }
 
-.header-icon-container {
-  position: relative;
-}
+/* TYPOGRAPHY ENDS */
 
-.header-icon {
-  width: 100%;
-  height: 367px;
-  line-height: 367px;
-  text-align: center;
-  vertical-align: middle;
+/* GRID STARTS */
+
+.thegrid {
   margin: 0 auto;
-  color: #ffffff;
-  font-size: 54px;
-  text-shadow: 0px 0px 20px #6abcea, 0px 5px 20px #6abcea;
-  opacity: 0.85;
 }
 
-.header-icon:hover {
-  background: rgba(0, 0, 0, 0.15);
-  font-size: 74px;
-  text-shadow: 0px 0px 20px #6abcea, 0px 5px 30px #6abcea;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  opacity: 1;
-}
-
-.movie-card:hover {
-  -webkit-transform: scale(1.03);
-  transform: scale(1.03);
-  box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.08);
-}
-
-.movie-content {
-  padding: 18px 18px 24px 18px;
+.elements-distance {
   margin: 0;
 }
 
-.movie-content-header,
-.movie-info {
+.mr-grid:before,
+.mr-grid:after {
+  content: "";
   display: table;
-  width: 100%;
 }
 
-.movie-title {
-  font-size: 24px;
-  margin: 0;
-  display: table-cell;
+.mr-grid:after {
+  clear: both;
 }
 
-.imax-logo {
-  width: 50px;
-  height: 15px;
-  background: url("https://6a25bbd04bd33b8a843e-9626a8b6c7858057941524bfdad5f5b0.ssl.cf5.rackcdn.com/media_kit/3e27ede823afbf139c57f1c78a03c870.jpg")
-    no-repeat;
-  background-size: contain;
-  display: table-cell;
-  float: right;
-  position: relative;
-  margin-top: 5px;
+.mr-grid {
+  *zoom: 1;
 }
 
-.movie-info {
-  margin-top: 1em;
-}
-
-.info-section {
-  display: table-cell;
-  text-transform: uppercase;
-  text-align: center;
-}
-
-.info-section:first-of-type {
-  text-align: left;
-}
-
-.info-section:last-of-type {
-  text-align: right;
-}
-
-.info-section label {
+.col1,
+.col2,
+.col3,
+.col3rest,
+.col4,
+.col4rest,
+.col5,
+.col5rest,
+.col6,
+.col6rest {
+  margin: 0.5%;
+  padding: 1%;
+  float: left;
   display: block;
-  color: white;
-  margin-bottom: 0.5em;
-  font-size: 9px;
 }
 
-.info-section span {
-  font-weight: 700;
-  font-size: 11px;
+.col1 {
+  width: 98%;
+}
+
+.col2 {
+  width: 47%;
+}
+
+.col3 {
+  width: 30.3333333333%;
+}
+
+.col4 {
+  width: 22%;
+}
+
+.col5 {
+  width: 17%;
+}
+
+.col6 {
+  width: 13.6666666667%;
+}
+
+.col3rest {
+  width: 63.6666666667%;
+}
+
+.col4rest {
+  width: 72%;
+}
+
+.col5rest {
+  width: 77%;
+}
+
+.col6rest {
+  width: 80.3333333333%;
+}
+
+.dribbble-link {
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  bottom: 15px;
+  right: 15px;
+  border-radius: 50px;
 }
